--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   
 </div>
 <div class="w3-container w3-center" >
-<video src="mov_bbb.mp4" autoplay muted loop width="1600" ></video>
+<video src="mov_bbb.mp4" autoplay muted loop width="100%" ></video>
 
 <div class="w3-container">
   <h1 class="w3-center w3-animate-left">NOSOTROS</h1>
